syntax = "proto3";
package kratos.api;

option go_package = "github.com/toomanysource/atreus/app/favorite/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Client client = 2;
  Data data = 3;
  JWT jwt = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;

  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Client {
  message User {
    string to = 1;
  }
  message Publish {
    string to = 1;
  }
  User user = 1;
  Publish publish = 2;
}

message Data {
  message Mysql {
    string driver = 1;
    string dsn = 2;
  }
  message Redis {
    int32 favorite_db = 1;
    string addr = 2;
    string password = 3;
    string username = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
  }
  Mysql mysql = 1;
  Redis redis = 2;
}

message JWT {
  message HTTP {
    string token_key = 1;
  }
  message GRPC {
    string token_key = 1;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}
